syntax = "proto3";

package token.transfers.v1;

message Transfer {
  string trx_hash = 1;
  uint64 log_index = 2;
  string from = 3;
  string to = 4;
  string quantity = 5;
  bool token_id = 6;
  string operator = 7;
}


message TransferBatch {
  string trx_hash = 1;
  uint64 log_index = 2;
  string from = 3;
  string to = 4;
  repeated string quantitys = 5;
  repeated string token_ids = 6;
  string operator = 7;
}


message Transfers {
  repeated Transfer transfers = 1;
}

message BatchTransfers {
  repeated TransferBatch batchTransfers = 1;
}